--- a/index.html
+++ b/index.html
@@ -844,41 +844,53 @@ document.getElementById('bookingForm').addEventListener('submit', async function
     submitBtn.disabled = true;
     submitBtn.textContent = 'Sending...';
     
-    const formData = new FormData(this);
+    const bookingData = {
+        name: document.getElementById('name').value,
+        phone: document.getElementById('phone').value,
+        postcode: document.getElementById('postcode').value,
+        service: document.getElementById('service').options[document.getElementById('service').selectedIndex].text,
+        date: document.getElementById('date').value,
+        time: document.getElementById('time').options[document.getElementById('time').selectedIndex].text
+    };
     
     try {
-        const response = await fetch('https://formspree.io/f/xgovrlyd', {
-            method: 'POST',
-            body: formData,
-            headers: {
-                'Accept': 'application/json'
-            }
-        });
+        // Send to Formspree (email) and Netlify function (SMS) in parallel
+        const [emailResponse, smsResponse] = await Promise.all([
+            fetch('https://formspree.io/f/xgovrlyd', {
+                method: 'POST',
+                body: JSON.stringify(bookingData),
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                }
+            }),
+            fetch('/.netlify/functions/send-sms', {
+                method: 'POST',
+                body: JSON.stringify(bookingData),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+        ]);
 
-        console.log('Response status:', response.status);
-        const responseData = await response.json();
-        console.log('Response data:', responseData);
-
-        if (response.ok) {
+        if (emailResponse.ok && smsResponse.ok) {
             document.getElementById('successModal').classList.add('show');
             this.reset();
             submitBtn.disabled = true;
             submitBtn.textContent = 'Confirm Booking ✂️';
             window.scrollTo({top: 0, behavior: 'smooth'});
         } else {
-            console.error('Error response:', responseData);
-            alert('Booking failed: ' + (responseData.error || 'Unknown error. Please call us at 01375 375566'));
-            submitBtn.disabled = false;
-            submitBtn.textContent = 'Confirm Booking ✂️';
+            throw new Error('Booking failed');
         }
     } catch (error) {
-        console.error('Catch error:', error);
-        alert('Booking failed. Please try again or call us at 01375 375566');
+        console.error('Error:', error);
+        alert('Booking received but notification failed. We will contact you shortly at ' + bookingData.phone);
         submitBtn.disabled = false;
         submitBtn.textContent = 'Confirm Booking ✂️';
     }
 });
 ```
+
 
         function closeModal() {
             document.getElementById('successModal').classList.remove('show');
@@ -920,4 +932,5 @@ document.getElementById('bookingForm').addEventListener('submit', async function
 
 </body>
 </html>
+
 
